  * When a new file transfer arrives which requires confirmation, the chat's unviewed content count is increased.
  * A new message no longer unminimizes the chat window. (#52)
  * Fixed logging in St. John's Newfoundland's time zone. (#9557)
 
 Accounts 
  * Fixed setting a global user icon. Previously, if you didn't have an account icon set but did set a global one, you would have no icon.

 Bonjour
  * Bonjour accounts now disconnect if we receive an error message.
 
 XMPP (Jabber, Google Talk, etc.)
  * Updated XMPP server list when registering
  * History from persistent group chats is now displayed as such and does not trigger events. (#6787)
  * Group chats which are not anonymous now display the actual contact in the user list. (#11841)
  * Fixed receiving colors and fonts from iChat. (#1323)
  * Enabled support for custom emoticons as an account option defaulting to on.
  * Fixed joining a group chat from an xmpp URL. (#11785)
  * "Not Authorized" is now displayed as a status message for contacts for whom you need to request authoriation.
  * Contacts are no longer told when you close their chat ("…has left the conversation"). (#8082)
  * Added a preference for file transfer proxies, defaulting to "proxy.eu.jabber.org."
 
 MSN
  * Possibly fixed a crash on connect. (#11508)
  * Fixes setting account-specific display names (only the global display name would be set).
  * Enabled server-side storing of contact aliases. (#11802)
  * Fixed displaying what message was unable to be sent when an error occurs. (#11796)
  * Moved the "display custom emoticons" to an account preference from the advanced preferences window.
 
 AIM, ICQ, and MobileMe
  * Added a preference to always use the AOL proxy server for file transfers and direct IM. (#11413)
  * Added a preference to use SSL for connections. (#9553) You can get information on the certificate by right-clicking the account in the Accounts preferences.
  
 MySpace IM
  * Added support for msim links. (#8036)
 